--- a/ale_tube/src/App.css
+++ b/ale_tube/src/App.css
@@ -3,8 +3,8 @@
   padding: 0;
 }
 
-/*{.App {
-  background-color: #111111d5;
+.App {
+  background-color: #111111fe;
   text-align: center;
-}*/
+}
 
