--- a/ale_tube/src/pages/Home/home.css
+++ b/ale_tube/src/pages/Home/home.css
@@ -13,25 +13,37 @@
     background-position: center; /* This centers the image */
     background-repeat: no-repeat;
     width: 100%;
-    height: 80vh;
+    height: 100vh;
+    top: 0;
 }
 
 .head_top{
-    background-color: rgba(0, 0, 0, 0.524);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.768);
     font-size: 30px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding-top: 20px;
     padding-bottom: 8px;
 }
 .head_top2{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
     color: white;
     display: flex;
     font-size: 20px;
-    background-color: rgba(134, 137, 138, 0.758);
+    background-color: rgba(185, 84, 51, 0.758);
     text-align: center;
     justify-content: center;
     text-align: center;
     padding: 5px;
+    margin-top: 60px;
 }
 .head_top2 ul{
     text-decoration: none;
@@ -47,7 +59,8 @@
     color: rgb(243, 160, 51);
     transition: 0.5s;
     text-decoration: underline;
-    background-color: rgba(0, 0, 0, 0.242);
+    background-color: rgba(0, 0, 0, 0.428);
+    padding: 30px;
     border-radius: 20px;
 }
 
@@ -82,29 +95,32 @@
     
 }
 .social{
-    background-color: rgba(215, 76, 45, 0.496);
-    margin-left: 30px;
-    margin-right: 40px;
-    
+    background-color: rgba(49, 33, 29, 0.386);
+
+    padding-bottom: 90px;
+    padding-top: 30px;
+    padding-left: 30px;
 }
 
 .social1{
-    margin-top: 70px;
+    margin-top: 190px;
     display: flex;
     text-align: center;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 70px;
     
 }
 .social .h1,.h2{
+    margin-top: 30px;
     background-color: rgba(249, 237, 10, 0.514);
     padding: 15px;
-    margin: 20px;
+    margin: 40px;
     display: flex;
     flex-direction: row;
     border-radius: 10px;
     cursor: pointer;
+    padding-left: 20px;
 }
 .social2{
     display: flex;
@@ -116,11 +132,12 @@
 .social2 .h1,.h2{
     background-color: rgba(249, 237, 10, 0.514);
     padding: 15px;
-    margin: 20px;
+    margin: 40px;
     display: flex;
     flex-direction: row;
     border-radius: 10px;
     cursor: pointer;
+    padding-left: 20px;
 }
 
 
