--- a/ale_tube/src/pages/Home_header2/midle.css
+++ b/ale_tube/src/pages/Home_header2/midle.css
@@ -7,6 +7,7 @@
 
 .M_all{
     margin-top: 40px;
+    padding-bottom: 80px;
     background-color: rgba(9, 8, 8, 0.818);
     color: white;
 }
@@ -32,7 +33,15 @@
     padding-bottom: 30px;
 }
 .youtube_video iframe{
-    margin-top: 40px;
-    margin-bottom: 20px;
+    margin-top: 60px;
+    margin-bottom: 40px;
     padding: 10px;
+}
+
+.youtube_video iframe:hover{
+
+    border-radius: 15px;
+    transform: translate(0,6%);
+    box-shadow:0 100px 30px #998f8fd0 ;
+
 }
